van regisztracio form

--- a/src/assets/i18n/hu.json
+++ b/src/assets/i18n/hu.json
@@ -7,15 +7,21 @@
     "felhasznalo": "Felhasználó",
     "jelszo": "Jelszó",
     "jelszo_ismet": "Jelszó ismét",
-    "felhasznalo_nev": "Felhasználó név",
+    "felhasznaloNev": "Felhasználónév",
     "email": "E-mail",
-    "teljes_nev": "Teljes név",
+    "teljesNev": "Teljes név",
     "min_8_char": "(min. 8 karakter)",
     "kotelezo_jelszo_error": "A jelszó megadása kötelező!",
     "jelszo_formatum_error": "A jelszó minimum 8 karakter hosszú kell legyen!",
     "ket_jelszo_nem_egyezik_error": "A két jelszó nem egyezik!",
     "kotelezo_ismetlojelszo_error": "Az ismétlőjelszó megadása kötelező!",
+    "kotelezo_felhasznalonev_error": "A felhasználónév megadása kötelező!",
+    "kotelezo_nev_error": "A név megadása kötelező!",
+    "kotelezo_email_error": "Az email-cím megadása kötelező!",
+    "email_formatum_error": "Az email-cím formátuma nem megfelelő!",
+    "mar_van_fiokja": "Már van fiókja?",
     "megsem": "Mégsem",
+    "nincs_fiokja": "Nincs fiókja?",
     "elfelejtett_jelszo": "Elfelejtett jelszó",
     "programok": "Programok",
     "uj_program_letrehozasa": "Új program létrehozása"
