--- a/src/assets/i18n/hu.json
+++ b/src/assets/i18n/hu.json
@@ -1,32 +1,40 @@
 {
-    "kezdolap": "Kezdőlap",
-    "bejelentkezes": "Bejelentkezés",
-    "kijelentkezes": "Kijelentkezés",
-    "regisztracio": "Regisztráció",
-    "belepes": "Belépés",
-    "felhasznalo": "Felhasználó",
-    "jelszo": "Jelszó",
-    "jelszo_ismet": "Jelszó ismét",
-    "felhasznaloNev": "Felhasználónév",
+    "title": "Hobbinapló",
+    "home": "Kezdőlap",
+    "login": "Bejelentkezés",
+    "logout": "Kijelentkezés",
+    "signup": "Regisztráció",
+    "user": "Felhasználó",
+    "password": "Jelszó",
+    "password_again": "Jelszó ismét",
+    "username": "Felhasználónév",
     "email": "E-mail",
-    "teljesNev": "Teljes név",
+    "full_name": "Teljes név",
     "min_8_char": "(min. 8 karakter)",
-    "kotelezo_jelszo_error": "A jelszó megadása kötelező!",
-    "jelszo_formatum_error": "A jelszó minimum 8 karakter hosszú kell legyen!",
-    "ket_jelszo_nem_egyezik_error": "A két jelszó nem egyezik!",
-    "kotelezo_ismetlojelszo_error": "Az ismétlőjelszó megadása kötelező!",
-    "kotelezo_felhasznalonev_error": "A felhasználónév megadása kötelező!",
-    "kotelezo_nev_error": "A név megadása kötelező!",
-    "kotelezo_email_error": "Az email-cím megadása kötelező!",
-    "email_formatum_error": "Az email-cím formátuma nem megfelelő!",
-    "mar_van_fiokja": "Már van fiókja?",
-    "megsem": "Mégsem",
-    "nincs_fiokja": "Nincs fiókja?",
-    "elfelejtett_jelszo": "Elfelejtett jelszó",
-    "programok": "Programok",
-    "uj_program_letrehozasa": "Új program létrehozása",
-    "sikertelen_bejelentkezes": "Sikertelen bejelentkezés",
-    "sikeres_bejelentkezes": "Sikeres bejelentkezés",
-    "sikeres_kijelentkezes": "Sikeres kijelentkezés",
-    "sikertelen_kijelentkezes": "Sikertelen kijelentkezés"
+    "required_password_error": "A jelszó megadása kötelező!",
+    "required_username_error": "A felhasználónév megadása kötelező!",
+    "required_email_error": "Az email-cím megadása kötelező!",
+    "required_full_name_error": "A teljes név megadása kötelező!",
+    "required_password_again_error": "Az ismétlőjelszó megadása kötelező!",
+    "required_password_match_error": "A két jelszó nem egyezik!",
+    "password_format_error": "A jelszó minimum 8 karakter hosszú kell legyen!",
+    "email_format_error": "Az email-cím formátuma nem megfelelő!",
+    "failed_login": "Sikertelen bejelentkezés",
+    "failed_logout": "Sikertelen kijelentkezés",
+    "failed_signup": "Sikertelen regisztráció",
+    "successful_login": "Sikeres bejelentkezés",
+    "successful_logout": "Sikeres kijelentkezés",
+    "successful_signup": "Sikeres regisztráció",
+    "forgot_password": "Elfelejtett jelszó",
+    "successfull_password_reset": "Sikeres jelszóvisszaállítás",
+    "failed_password_reset": "Sikertelen jelszóvisszaállítás",
+    "cancel": "Mégsem",
+    "understood": "Megértettem",
+    "no_account": "Nincs fiókja?",
+    "already_have_account": "Már van fiókja?",
+    "first_page": "Első oldal",
+    "item_per_page": "Oldalméret",
+    "last_page": "Utolsó oldal",
+    "next_page": "Következő oldal",
+    "previous_page": "Előző oldal"
 }
