--- a/src/assets/i18n/hu.json
+++ b/src/assets/i18n/hu.json
@@ -6,7 +6,7 @@
     "signup": "Regisztráció",
     "user": "Felhasználó",
     "password": "Jelszó",
-    "password_again": "Jelszó ismét",
+    "confirm_password": "Jelszó ismét",
     "username": "Felhasználónév",
     "email": "E-mail",
     "full_name": "Teljes név",
@@ -15,7 +15,7 @@
     "required_username_error": "A felhasználónév megadása kötelező!",
     "required_email_error": "Az email-cím megadása kötelező!",
     "required_full_name_error": "A teljes név megadása kötelező!",
-    "required_password_again_error": "Az ismétlőjelszó megadása kötelező!",
+    "required_confirm_password_error": "Az ismétlőjelszó megadása kötelező!",
     "required_password_match_error": "A két jelszó nem egyezik!",
     "password_format_error": "A jelszó minimum 8 karakter hosszú kell legyen!",
     "email_format_error": "Az email-cím formátuma nem megfelelő!",
