--- a/src/assets/i18n/hu.json
+++ b/src/assets/i18n/hu.json
@@ -36,5 +36,6 @@
     "item_per_page": "Oldalméret",
     "last_page": "Utolsó oldal",
     "next_page": "Következő oldal",
-    "previous_page": "Előző oldal"
+    "previous_page": "Előző oldal",
+    "language": "Nyelvváltoztatás"
 }
