--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -44,5 +44,7 @@
     "failed_user_save": "Failed user save",
     "signup_with_google": "Sign up or log in with Google",
     "reset_password": "Reset password",
-    "send_email": "Send email"
+    "send_email": "Send email",
+    "hobby_list": "Hobby List",
+    "add_to_own_hobbies": "Add to own hobbies"
 }
