--- a/src/assets/i18n/hu.json
+++ b/src/assets/i18n/hu.json
@@ -46,5 +46,6 @@
     "reset_password": "Jelszó visszaállítás",
     "send_email": "Email küldése",
     "hobby_list": "Hobbi lista",
-    "add_to_own_hobbies": "Hozzáadás a saját hobbikhoz"
+    "add_to_own_hobbies": "Hozzáadás a saját hobbikhoz",
+    "permission-denied": "Nincs jogosultsága a művelet végrehajtásához"
 }
