--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -47,5 +47,8 @@
     "send_email": "Send email",
     "hobby_list": "Hobby List",
     "add_to_own_hobbies": "Add to own hobbies",
-    "permission-denied": "You don't have permission to execute this action"
+    "permission-denied": "You don't have permission to execute this action",
+    "404_not_found": "404 Page Not Found",
+    "successful_own_hobby_save": "Successful own hobby save",
+    "failed_own_hobby_save": "Failed own hobby save"
 }
