--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -50,5 +50,6 @@
     "permission-denied": "You don't have permission to execute this action",
     "404_not_found": "404 Page Not Found",
     "successful_own_hobby_save": "Successful own hobby save",
-    "failed_own_hobby_save": "Failed own hobby save"
+    "failed_own_hobby_save": "Failed own hobby save",
+    "own-hobbies": "Own Hobbies"
 }
