--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -51,5 +51,6 @@
     "404_not_found": "404 Page Not Found",
     "successful_own_hobby_save": "Successful own hobby save",
     "failed_own_hobby_save": "Failed own hobby save",
-    "own-hobbies": "Own Hobbies"
+    "own-hobbies": "Own Hobbies",
+    "my_profile": "My Profile"
 }
