activity wrap routing done

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -65,5 +65,6 @@
     "spent_hours": "Spent Hours",
     "notes": "Notes",
     "description": "Description",
-    "activity": "Activity"
+    "activity": "Activity",
+    "activity_wrap": "Activity Wrap"
 }
