--- a/src/assets/i18n/hu.json
+++ b/src/assets/i18n/hu.json
@@ -65,5 +65,6 @@
     "spent_hours": "Eltöltött órák",
     "notes": "Jegyzetek",
     "description": "Leírás",
-    "activity": "Tevékenység"
+    "activity": "Tevékenység",
+    "activity_wrap": "Tevékenység összefoglaló"
 }
