--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -72,5 +72,12 @@
     "add_new_hobby": "Add New Hobby",
     "successful_hobby_save": "Successful hobby save",
     "failed_hobby_save": "Failed hobby save",
-    "error": "Error happened"
+    "error": "Error happened",
+    "get_own_hobbies_error": "Error while getting own hobbies",
+    "profile_error": "Error while getting profile",
+    "get_user_error": "Error while getting user",
+    "is_authenticated_error": "Error while checking authentication",
+    "get_hobby_by_id_error": "Error while getting hobby by id",
+    "get_activities_error": "Error while getting activities",
+    "get_hobbies_error": "Error while getting hobbies"
 }
