--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -80,5 +80,7 @@
     "get_hobby_by_id_error": "Error while getting hobby by id",
     "get_activities_error": "Error while getting activities",
     "get_hobbies_error": "Error while getting hobbies",
-    "password_mismatch_error": "Password mismatch"
+    "password_mismatch_error": "Password mismatch",
+    "get_document_property_error": "Error while getting document property",
+    "get_activity_wrap_data_error": "Error while getting activity wrap data"
 }
