--- a/src/assets/i18n/hu.json
+++ b/src/assets/i18n/hu.json
@@ -83,5 +83,7 @@
     "password_mismatch_error": "A két jelszó nem egyezik",
     "get_document_property_error": "A dokumentum adattagjának lekérése sikertelen",
     "get_activity_wrap_data_error": "A tevékenység összefoglaló lekérése sikertelen",
-    "hobbies": "Hobbik"
+    "hobbies": "Hobbik",
+    "hobby_date_label": "Tevékenység dátuma: ",
+    "date": "Dátum"
 }
