4 diagram gombokkal kész

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -91,5 +91,23 @@
     "hobby_description_hu": "Hobby description (Hungarian)",
     "hobby_description_en": "Hobby description (English)",
     "hobby_image": "Hobby image",
-    "hobby_image_url": "Hobby image url"
+    "hobby_image_url": "Hobby image url",
+    "months": "Months",
+    "january": "January",
+    "february": "February",
+    "march": "March",
+    "april": "April",
+    "may": "May",
+    "june": "June",
+    "july": "July",
+    "august": "August",
+    "september": "September",
+    "october": "October",
+    "november": "November",
+    "december": "December",
+    "select_month": "Select month",
+    "show_monthly_pie": "Show monthly pie chart",
+    "show_monthly_vertical": "Show monthly vertical chart",
+    "show_all_pie": "Show all hobby pie chart",
+    "show_all_vertical": "Show all hobby vertical chart"
 }
