--- a/src/assets/i18n/hu.json
+++ b/src/assets/i18n/hu.json
@@ -91,5 +91,23 @@
     "hobby_name_en": "Hobbi neve (angolul)",
     "hobby_name_hu": "Hobbi neve (magyarul)",
     "hobby_image": "Hobbi képe",
-    "hobby_image_url": "Hobbi kép URL"
+    "hobby_image_url": "Hobbi kép URL",
+    "months": "Hónapok",
+    "january": "Január",
+    "february": "Február",
+    "march": "Március",
+    "april": "Április",
+    "may": "Május",
+    "june": "Június",
+    "july": "Július",
+    "august": "Augusztus",
+    "september": "Szeptember",
+    "october": "Október",
+    "november": "November",
+    "december": "December",
+    "select_month": "Hónap kiválasztása",
+    "show_all_pie": "Összes hobbi - kördiagram",
+    "show_all_vertical": "Összes hobbi - oszlopdiagram",
+    "show_monthly_pie": "Hónapos kimutatás - kördiagram",
+    "show_monthly_vertical": "Hónapos kimutatás - oszlopdiagram"
 }
