--- a/src/assets/i18n/hu.json
+++ b/src/assets/i18n/hu.json
@@ -109,5 +109,6 @@
     "show_all_pie": "Összes hobbi - kördiagram",
     "show_all_vertical": "Összes hobbi - oszlopdiagram",
     "show_monthly_pie": "Hónapos kimutatás - kördiagram",
-    "show_monthly_vertical": "Hónapos kimutatás - oszlopdiagram"
+    "show_monthly_vertical": "Hónapos kimutatás - oszlopdiagram",
+    "show": "Mutasd"
 }
