--- a/src/assets/i18n/hu.json
+++ b/src/assets/i18n/hu.json
@@ -110,5 +110,6 @@
     "show_all_vertical": "Összes hobbi - oszlopdiagram",
     "show_monthly_pie": "Hónapos kimutatás - kördiagram",
     "show_monthly_vertical": "Hónapos kimutatás - oszlopdiagram",
-    "show": "Mutasd"
+    "show": "Mutasd",
+    "show_grouped_vertical": "12 havi kimutatás - Csoportosított oszlopdiagram"
 }
