--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -111,5 +111,6 @@
     "show_all_pie": "Show all hobby pie chart",
     "show_all_vertical": "Show all hobby vertical chart",
     "show": "Show",
-    "show_grouped_vertical": "Show 12 month grouped vertical chart"
+    "show_grouped_vertical": "Show 12 month grouped vertical chart",
+    "edit_profile": "Edit Profile"
 }
