--- a/src/assets/i18n/hu.json
+++ b/src/assets/i18n/hu.json
@@ -111,5 +111,6 @@
     "show_monthly_pie": "Hónapos kimutatás - kördiagram",
     "show_monthly_vertical": "Hónapos kimutatás - oszlopdiagram",
     "show": "Mutasd",
-    "show_grouped_vertical": "12 havi kimutatás - Csoportosított oszlopdiagram"
+    "show_grouped_vertical": "12 havi kimutatás - Csoportosított oszlopdiagram",
+    "edit_profile": "Profil szerkesztése"
 }
