--- a/src/assets/i18n/hu.json
+++ b/src/assets/i18n/hu.json
@@ -112,5 +112,8 @@
     "show_monthly_vertical": "Hónapos kimutatás - oszlopdiagram",
     "show": "Mutasd",
     "show_grouped_vertical": "12 havi kimutatás - Csoportosított oszlopdiagram",
-    "edit_profile": "Profil szerkesztése"
+    "edit_profile": "Profil szerkesztése",
+    "get_hobby_category_error": "Hobbi kategória lekérése sikertelen",
+    "categories": "Kategóriák",
+    "delete_activity": "Tevékenység törlése"
 }
