error message when own_hobbies/fake id

--- a/src/assets/i18n/hu.json
+++ b/src/assets/i18n/hu.json
@@ -115,5 +115,6 @@
     "edit_profile": "Profil szerkesztése",
     "get_hobby_category_error": "Hobbi kategória lekérése sikertelen",
     "categories": "Kategóriák",
-    "delete_activity": "Tevékenység törlése"
+    "delete_activity": "Tevékenység törlése",
+    "document_not_found": "A dokumentum nem található"
 }
