--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -115,5 +115,6 @@
     "edit_profile": "Edit Profile",
     "get_hobby_category_error": "Error while getting hobby category",
     "categories": "Categories",
-    "delete_activity": "Tevékenység törlése"
+    "delete_activity": "Delete activity",
+    "document_not_found": "Document not found"
 }
