add hobbynál van matoption

--- a/src/assets/i18n/hu.json
+++ b/src/assets/i18n/hu.json
@@ -117,5 +117,8 @@
     "categories": "Kategóriák",
     "delete_activity": "Tevékenység törlése",
     "document_not_found": "A dokumentum nem található",
-    "required_fullname_error": "A teljes név megadása kötelező"
+    "required_fullname_error": "A teljes név megadása kötelező",
+    "other": "egyéb",
+    "others": "egyéb",
+    "custom": "Egyéni"
 }
