--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -117,5 +117,8 @@
     "categories": "Categories",
     "delete_activity": "Delete activity",
     "document_not_found": "Document not found",
-    "required_fullname_error": "Full name is required!"
+    "required_fullname_error": "Full name is required!",
+    "other": "other",
+    "others": "others",
+    "custom": "Custom"
 }
