ha egy activity van akkor törölni a hobbit a sajátok közül, képek holzzáadása

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -120,5 +120,6 @@
     "required_fullname_error": "Full name is required!",
     "other": "other",
     "others": "others",
-    "custom": "Custom"
+    "custom": "Custom",
+    "delete_own_hobby_error": "Error while deleting own hobby"
 }
