--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -121,5 +121,7 @@
     "other": "other",
     "others": "others",
     "custom": "Custom",
-    "delete_own_hobby_error": "Error while deleting own hobby"
+    "delete_own_hobby_error": "Error while deleting own hobby",
+    "not_logged_in": "You are currently not logged in!",
+    "invalid_form": "Invalid form"
 }
