--- a/src/assets/i18n/hu.json
+++ b/src/assets/i18n/hu.json
@@ -122,5 +122,7 @@
     "others": "egyéb",
     "custom": "Egyéni",
     "delete_own_hobby_error": "Saját hobbi törlése sikertelen",
+    "invalid_form": "Érvénytelen űrlap",
+    "not_logged_in": "Be kell jelentkezni a művelet elvégzéséhez!",
     "home_intro": "Szeretnéd összegezni, hogy mennyi időt töltöttél a hobbijaiddal? Kíváncsi vagy a statisztikákra? Jó lenne év közben megnézni, hogy mennyi szabadidőd volt az eltelt hónapokban? Akkor a Hobbinapló a megoldás. A Hobbinapló alkalmazás számos funkciót és lehetőséget kínál a használói számára. Lehetőség van már ismert hobbikat felvenni a sajátként, rögzíteni a tevékenység dátumát, hosszát és még egy jegyzetet is. Ezeket törölni is lehet. Ha nincs a szeretett hobbid a listában, belépett felhasználóként egyéni hobbit is tudsz felvenni. Lehetőség van a hobbi nevének, képének és kategóriájának megadására is. Ha esetleg egy külföldi barátodnak ajánlanád az oldalt, az sem probléma, ha nem tud magyarul, hisz nyelvváltoztatásra minden felhasználói szinten van lehetőség."
 }
