login signup szépítés

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -42,7 +42,7 @@
     "language": "Change language",
     "successful_user_save": "Successful user save",
     "failed_user_save": "Failed user save",
-    "signup_with_google": "Sign up or log in with Google",
+    "signup_with_google": "Sign in with Google",
     "reset_password": "Reset password",
     "send_email": "Send email",
     "hobby_list": "Hobby List",
