--- a/src/assets/i18n/hu.json
+++ b/src/assets/i18n/hu.json
@@ -42,7 +42,7 @@
     "language": "Nyelvváltoztatás",
     "successful_user_save": "Sikeres felhasználó mentés",
     "failed_user_save": "Sikertelen felhasználó mentés",
-    "signup_with_google": "Regisztráció vagy bejelentkezés Google fiókkal",
+    "signup_with_google": "Bejelentkezés Google fiókkal",
     "reset_password": "Jelszó visszaállítás",
     "send_email": "Email küldése",
     "hobby_list": "Hobbi lista",
