--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -123,5 +123,7 @@
     "custom": "Custom",
     "delete_own_hobby_error": "Error while deleting own hobby",
     "not_logged_in": "You are currently not logged in!",
-    "invalid_form": "Invalid form"
+    "invalid_form": "Invalid form",
+    "successful_user_edit": "Successful user profile edit",
+    "failed_user_edit": "Failed user profile edit"
 }
