--- a/src/assets/i18n/hu.json
+++ b/src/assets/i18n/hu.json
@@ -141,5 +141,7 @@
     "hobby_deleted_idb": "Hobbi törölve az IndexedDB adatbázisból",
     "delete_db_data_error": "Adatbázis adatok törlése sikertelen",
     "db_data_deleted": "Adatbázis adatok törölve",
+    "get_own_hobbies_idb_error": "Saját hobbi lekérése sikertelen az IndexedDB adatbázisból",
+    "get_hobbies_idb_error": "Hobbik lekérése sikertelen az IndexedDB adatbázisból",
     "home_intro": "Szeretnéd összegezni, hogy mennyi időt töltöttél a hobbijaiddal? Kíváncsi vagy a statisztikákra? Jó lenne év közben megnézni, hogy mennyi szabadidőd volt az eltelt hónapokban? Akkor a Hobbinapló a megoldás. Ez a remek alkalmazás számos funkciót és lehetőséget kínál a használói számára. Regisztráció és profilkészítés után lehetőség van már ismert hobbikat felvenni a saját gyűjteményedbe, rögzíteni a tevékenység dátumát, hosszát és még egy jegyzetet is. Ha meggondoltad magad vagy hibásan rögzítetted, akkor ezeket a tevékenységeket törölni is lehet. Ha nem találod az egyik szeretett hobbid a listában, belépett felhasználóként egyéni hobbit is tudsz felvenni. Lehetőség van az új hobbi nevének, leírásának, képének és kategóriájának megadására is. Ha esetleg egy külföldi barátodnak ajánlanád az oldalt, az sem probléma, ha nem tud magyarul, hisz nyelvváltoztatásra minden felhasználói szinten van lehetőség. A hobbikat lehet kategória alapján szűrni, szóval könnyebben tudod megtalálni a számodra érdekes kategóriákhoz tartozó hobbikat."
 }
