kategóriák letárolása indexeddbben

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -135,10 +135,9 @@
     "update_downloaded": "Update downloaded",
     "error_db_open": "Error while opening database",
     "db_not_loaded": "Database not loaded",
-    "repeated_hobby": "Repeated hobby",
-    "add_hobby_error_idb": "Error while adding hobby to indexeddb",
-    "hobby_added_idb": "Hobby added to indexeddb",
-    "hobby_deleted_idb": "Hobby deleted from indexeddb",
+    "repeated_element": "Repeated element",
+    "add_element_error_idb": "Error while adding element to indexeddb",
+    "element_added_idb": "Element added to indexeddb",
     "delete_db_data_error": "Error while deleting database data",
     "db_data_deleted": "Database data deleted",
     "get_own_hobbies_idb_error": "Error while getting own hobbies from indexeddb",
