--- a/src/assets/i18n/hu.json
+++ b/src/assets/i18n/hu.json
@@ -135,10 +135,9 @@
     "update_downloaded": "A Hobbinapló frissítve lett!",
     "error_db_open": "Hiba az adatbázis megnyitásakor",
     "db_not_loaded": "Az adatbázis nem töltődött be",
-    "repeated_hobby": "Ez a hobbi már szerepel a listában",
-    "add_hobby_error_idb": "Hobbi hozzáadása sikertelen az IndexedDB adatbázishoz",
-    "hobby_added_idb": "Hobbi hozzáadva az IndexedDB adatbázishoz",
-    "hobby_deleted_idb": "Hobbi törölve az IndexedDB adatbázisból",
+    "repeated_element": "Ez a elem már szerepel a listában",
+    "add_element_error_idb": "Az elem hozzáadása sikertelen az IndexedDB adatbázishoz",
+    "elem_added_idb": "Elem hozzáadva az IndexedDB adatbázishoz",
     "delete_db_data_error": "Adatbázis adatok törlése sikertelen",
     "db_data_deleted": "Adatbázis adatok törölve",
     "get_own_hobbies_idb_error": "Saját hobbi lekérése sikertelen az IndexedDB adatbázisból",
